# df_ws

./: docker-compose.yaml  readme.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/decision_maker_node/lib/decision_maker_node/: decision_maker
install/decision_maker_node/lib/decision_maker_node/scripts/: llm_inference.py  llm_inference2.py
install/decision_maker_node/share/ament_index/resource_index/parent_prefix_path/: decision_maker_node
install/decision_maker_node/share/decision_maker_node/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/decision_maker_node/share/decision_maker_node/cmake/: decision_maker_nodeConfig.cmake
install/google_tts_node/lib/google_tts_node/: google_tts
install/google_tts_node/share/google_tts_node/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/whisper_asr_node/lib/: libwhisper.so.1.7.2
install/whisper_asr_node/lib/cmake/whisper/: whisper-config.cmake
install/whisper_asr_node/lib/pkgconfig/: whisper.pc
install/whisper_asr_node/lib/whisper_asr_node/: whisper_asr
install/whisper_asr_node/share/ament_index/resource_index/parent_prefix_path/: whisper_asr_node
install/whisper_asr_node/share/whisper_asr_node/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
src/decision_maker_node/: CMakeLists.txt  Dockerfile  package.xml
src/decision_maker_node/models/: download_model.sh
src/decision_maker_node/src/: decision_maker.cpp
src/google_tts_node/: CMakeLists.txt  Dockerfile  package.xml  requirements.txt
src/google_tts_node/scripts/: tts_inference.py
src/google_tts_node/src/: google_tts.cpp
src/whisper_asr_node/: CMakeLists.txt  Dockerfile  package.xml
src/whisper_asr_node/src/: whisper_asr.cpp
